[#14] Prevent vertical toolbar overlapping field

--- a/src/components/QuickSelect/QuickSelect.sass
+++ b/src/components/QuickSelect/QuickSelect.sass
@@ -13,12 +13,14 @@
       @include card-style
       bottom: auto
       left: auto
-      max-width: calc(4em)
+      max-height: calc(100vh - 20em)
+      max-width: auto
+      min-width: 4em
+      overflow: auto
       right: 0.75em
       top: 9em
       transform: none
-      max-height: calc(100vh - 20em)
-      overflow: auto
+      width: 4em
 
   // This specificity is needed to overwrite MUI Paper transition styles.
   &.MuiPaper-root
